# fallout-lib

./: CMakeLists.txt  README.md
assets/: skildex.frm
examples/: CMakeLists.txt  dat_example.cpp  frm.cpp  frm2png.cpp  map_main.cpp
falloutLib/: CMakeLists.txt  cDAT.cpp  cFrm.cpp  cFrmFrame.cpp  cList.cpp  cMap.cpp  cPalette.cpp  utils.cpp
falloutLib/include/: cDAT.h  cError.h  cFrmFrame.h  cList.h  cMap.h  falloutLib.h  utils.h
include/: cFrm.h  cFrmFrame.h  cPalette.h  falloutLib.h  utils.h
src/: cError.cpp  cFrm.cpp  cFrmFrame.cpp  cPalette.cpp  falloutLib.cpp  main.cpp  utils.cpp
